# blockblast-solver

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.superpowers/sdd/: task-1-report.md  task-2-report.md
block_blast_solver/: __init__.py  config.py  main.py  state.py
block_blast_solver/models/: __init__.py  board_cell_classifier.onnx  inventory_slot_masker.onnx
block_blast_solver/modules/: __init__.py  capture.py  solver.py  vision.py  vision_fixtures.py  vision_models.py  visualizer.py
docs/superpowers/plans/: 2026-05-22-monte-carlo-survival-solver.md  2026-05-22-solver-streak-combo.md  2026-05-22-survival-solver-intelligence.md  2026-07-16-learned-block-detection.md
docs/superpowers/specs/: 2026-05-22-lonelyscreen-integration-design.md  2026-05-22-monte-carlo-survival-solver-design.md  2026-05-22-solver-streak-combo-design.md  2026-05-22-survival-solver-intelligence-design.md  2026-07-16-learned-block-detection-design.md
scripts/: benchmark_solver.py  export_vision_training_data.py  generate_vision_skin_fixtures.py  train_vision_models.py
tests/: test_capture.py  test_config.py  test_export_vision_training_data.py  test_solver_future_sets.py  test_solver_monte_carlo.py  test_solver_streak.py  test_solver_survival.py  test_state.py  test_vision_board.py  test_vision_fixture_schema.py  test_vision_models.py  test_vision_pieces.py  test_vision_skins.py  test_visualizer_outcomes.py
tests/fixtures/vision_skins/: README.md  cake_wafer.json  gem_busy.json  gem_five_line.json  gem_two_rows.json  heart_pastel.json  pearl_mixed.json  stone_corner.json  watermelon_green.json  watermelon_purple.json  wood_classic.json
